2003-02-23 Roberto Raggi <roberto@kdevelop.org>
	* use the new c++ parser to fill the class browser

2003-02-23 Caleb Tennis <caleb@aei-tech.com>
	* Bug and Compilation Fixes

2003-02-21 Alexander Dymo <cloudtemple@mksat.net>
	* Subclassing widgets based on ui-files is now available in automake project manager too.
	* Iterative subclassing for existing subclasses is available too.
	* Subclassing is moved to cppsupport.

2003-02-20 Roberto Raggi <roberto@kdevelop.org>
	* Added Make-member feature to c++ support.
	* Added Realtime class browser

2003-02-19 F@lk Brettschneider <falkbr@kdevelop.org>
	* QEditor find dialog improved:
	- don't stop at end of file but loop to begin (makes much sense when starting from cursor)
	- use text selection as search string

2003-02-17 Hamish Rodda <meddie@yoyo.its.monash.edu.au>
	* parts/outputviews
		- added detection of k_lineinfo output to application output view

2003-02-13  Eray Ozkural (exa) <erayo@cs.bilkent.edu.tr>
        * lib/structure:
	  - fix: Trie_Impl apply() should apply only to non_empty
	    components
          - update docs, planning to take over the world again

2003-02-12 jbb <jbb@kdevelop.org>
    * parts/debugger
    - Sync source with thread patch in kdevelop2.1.x. Some bits were missed
            from a previous merge. This should fix some thread issues.
    - Fixed: In some situations locals were not displayed.
            Note: Parameters may still be missing depending on the fn sig.
    - Fixed: Can't find source problem due to QRegExp too greedy.
            Note: The "finish" command can still have some odd behaviour
            due to an extra line output (which may be gdb version dependent).

2003-02-11  Eray Ozkural (exa) <erayo@cs.bilkent.edu.tr>
        * lib/structure:
          - implemented take(), I wonder why I left it like that
          - fix: size() returns number of components

2003-02-11 Mickael Marchand <marchand@kde.org>
	* parts/svn: