@@ -4,11 +4,11 @@ noinst_LTLIBRARIES = libkdevsourceinfo.la
 
 libkdevsourceinfo_la_SOURCES = classstore.cpp parsedclass.cpp parsedmethod.cpp \
 			       parsedattribute.cpp parsedargument.cpp parsedparent.cpp \
-			       parsedstruct.cpp classtreenode.cpp parsedcontainer.cpp \
+			       classtreenode.cpp parsedcontainer.cpp \
 			       parsedclasscontainer.cpp parseditem.cpp parsedscopecontainer.cpp \
 			       ClassStoreIface.skel ClassStoreIface.cpp
 
 #noinst_HEADERs = classstore.h parsedclass.h parsedmethod.h \
 #		 parsedattribute.h parsedargument.h parsedparent.h parsedsignalslot.h \
-#		 persistantclassstore.h parsedstruct.h classtreenode.h parseditem.h parsedcontainer.h \
+#		 persistantclassstore.h classtreenode.h parseditem.h parsedcontainer.h \
 #		 parsedclasscontainer.h parsedscopecontainer.h programmingbycontract.h
