@@ -1,80 +1,0 @@
-/***************************************************************************
-                          parsedstruct.cpp  -  description
-                             -------------------
-    begin                : Mon Nov 21 1999
-    copyright            : (C) 1999 by Jonas Nordin
-    email                : jonas.nordin@syncom.se
- ***************************************************************************/
-
-/***************************************************************************
- *                                                                         *
- *   This program is free software; you can redistribute it and/or modify  *
- *   it under the terms of the GNU General Public License as published by  *
- *   the Free Software Foundation; either version 2 of the License, or     *
- *   (at your option) any later version.                                   * 
- *                                                                         *
- ***************************************************************************/
-
-#include "parsedstruct.h"
-#include <kdebug.h>
-
-/*********************************************************************
- *                                                                   *
- *                     CREATION RELATED METHODS                      *
- *                                                                   *
- ********************************************************************/
-
-/*-------------------------------------- ParsedStruct::ParsedStruct()
- * ParsedStruct()
- *   Constructor.
- *
- * Parameters:
- *   -
- * Returns:
- *   -
- *-----------------------------------------------------------------*/
-ParsedStruct::ParsedStruct() : ParsedContainer()
-{
-    setItemType( PIT_STRUCT );
-}
-
-/*------------------------------------- CClassParser::~CClassParser()
- * ~CClassParser()
- *   Destructor.
- *
- * Parameters:
- *   -
- * Returns:
- *   -
- *-----------------------------------------------------------------*/
-ParsedStruct::~ParsedStruct()
-{
-}
-
-
-/*********************************************************************
- *                                                                   *
- *                          PUBLIC METHODS                           *
- *                                                                   *
- ********************************************************************/
-
-/*------------------------------------------------- CClassStore::out()
- * out()
- *   Output this object to stdout.
- *
- * Parameters:
- *   -
- * Returns:
- *   -
- *-----------------------------------------------------------------*/
-void ParsedStruct::out()
-{
-    if ( !comment().isEmpty() )
-        kdDebug(9005) << "   " << comment() << endl;
-    
-    kdDebug(9005) << "   " << path() << endl;
-    for ( attributeIterator.toFirst();
-          attributeIterator.current();
-          ++attributeIterator )
-        attributeIterator.current()->out();
-}
